--- a/templates/home.html
+++ b/templates/home.html
@@ -1,23 +1,49 @@
 <h3><i class="fa fa-angle-right"></i> {{judul}}</h3>
-<div class="row mt">
-    <div class="col-lg-12">
-        <table class="table table-bordered table-hover table-striped">
-            <thead>
-                <tr>
-                    <td><b>NAMA TEMPAT</b></td>
-                    <td><b>LATITUDE</b></td>
-                    <td><b>LONGTITUDE</b></td>
-                    <td><b>DESKRIPSI</b></td>
-                </tr>
-            </thead>
-            <tbody>
-                <tr ng-repeat="tempat in dataTempat">
-                    <td>{{tempat.nama_tempat}}</td>
-                    <td>{{tempat.latitude}}</td>
-                    <td>{{tempat.longtitude}}</td>
-                    <td>{{tempat.deskripsi}}</td>
-                </tr>
-            </tbody>
-        </table>
+<div class="showback">
+    <div class="row mt">
+        <div class="col-md-12">
+            <table class="table table-bordered table-striped" datatable="ng" dt-options="dtOptions" dt-column-defs="dtColumnDefs">
+                <thead>
+                    <tr>
+                        <td><b>NO</b></td>
+                        <td><b>NAMA TEMPAT</b></td>
+                        <td><b>LATITUDE</b></td>
+                        <td><b>LONGTITUDE</b></td>
+                        <td><b>DESKRIPSI</b></td>
+                        <td>
+                            <div class="btn btn-xs btn-block btn-primary" ng-click="tambahData()"><span class="glyphicon glyphicon-plus"></span></div>
+                        </td>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr ng-repeat="tempat in dataTempat">
+                        <td>{{$index + 1}}</td>
+                        <td>{{tempat.nama_tempat}}</td>
+                        <td>{{tempat.latitude}}</td>
+                        <td>{{tempat.longtitude}}</td>
+                        <td>{{tempat.deskripsi}}</td>
+                        <td><div class="btn btn-xs btn-block btn-danger" ng-click="hapus(tempat.id)"><span class="glyphicon glyphicon-trash"></span></div></td>
+                    </tr>
+                </tbody>
+            </table>
+        </div>
+    </div>
+</div>
+
+<div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+                <h4 class="modal-title" id="myModalLabel">Modal title</h4>
+            </div>
+            <div class="modal-body">
+                Hi there, I am a Modal Example for Dashgum Admin Panel.
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                <button type="button" class="btn btn-primary">Save changes</button>
+            </div>
+        </div>
     </div>
 </div>
