--- a/templates/home.html
+++ b/templates/home.html
@@ -35,14 +35,37 @@
         <div class="modal-content">
             <div class="modal-header">
                 <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
-                <h4 class="modal-title" id="myModalLabel">Modal title</h4>
+                <h4 class="modal-title" id="myModalLabel">Tambah Data Tempat</h4>
             </div>
             <div class="modal-body">
-                Hi there, I am a Modal Example for Dashgum Admin Panel.
+                <form>
+                    <table class="table table-bordered table-striped">
+                        <tr>
+                            <td><b>NAMA TEMPAT</b></td>
+                            <td>:</td>
+                            <td><input type="text" ng-model="Tempat.nama_tempat" class="form-control"></td>
+                        </tr>
+                        <tr>
+                            <td><b>LATITUDE</b></td>
+                            <td>:</td>
+                            <td><input type="text" ng-model="Tempat.latitude" class="form-control"></td>
+                        </tr>
+                        <tr>
+                            <td><b>LONGTITUDE</b></td>
+                            <td>:</td>
+                            <td><input type="text" ng-model="Tempat.longtitude" class="form-control"></td>
+                        </tr>
+                        <tr>
+                            <td><b>DESKRIPSI</b></td>
+                            <td>:</td>
+                            <td><textarea ng-model="Tempat.deskripsi" class="form-control" rows="8"></textarea></td>
+                        </tr>
+                    </table>
+                </form>
             </div>
             <div class="modal-footer">
-                <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-                <button type="button" class="btn btn-primary">Save changes</button>
+                <button type="button" class="btn btn-default" ng-click="clear()">Close</button>
+                <button type="button" class="btn btn-primary" ng-click="simpan()">Save changes</button>
             </div>
         </div>
     </div>
